--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Admin Dashboard</title>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <main class="main-container">
@@ -81,5 +82,6 @@
         </div>
       </section>
     </main>
+    <script src="/script.js"></script>
   </body>
 </html>
