added the overall style

--- a/index.html
+++ b/index.html
@@ -225,6 +225,39 @@
             <div class="project-grid">
               <div class="project-card">
                 <div class="project-title">title</div>
+                <div class="project-content">
+                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
+                  Laboriosam enim voluptates asperiores veritatis, tempora
+                  obcaecati. Harum expedita tempora atque iure, facere iste,
+                  odit, reiciendis tempore sed nihil dignissimos ducimus
+                  eligendi! Lorem ipsum dolor sit amet, consectetur adipisicing
+                  elit. Sunt soluta sit consectetur non. Quos quia doloribus eum
+                  maxime reprehenderit, nihil facere adipisci recusandae. Eius
+                  voluptatibus assumenda ducimus vitae recusandae nulla!
+                </div>
+
+                <div class="project-options">
+                  <img
+                    src="https://educanales.github.io/admin-dashboard/icons/star.svg"
+                    alt="star"
+                  />
+                  <img
+                    src="https://educanales.github.io/admin-dashboard/icons/eye.svg"
+                    alt="eye"
+                  />
+                  <img
+                    src="https://educanales.github.io/admin-dashboard/icons/dots.svg"
+                    alt="dots"
+                  />
+                </div>
+              </div>
+              <div class="project-card">
+                <div class="project-title">title</div>
+                <div class="project-content">some text</div>
+                <div class="project-options"></div>
+              </div>
+              <div class="project-card">
+                <div class="project-title">title</div>
                 <div class="project-content">some text</div>
                 <div class="project-options"></div>
               </div>
@@ -245,17 +278,71 @@
               <div class="announcement-mark">Announcement</div>
               <div class="announcement-grid">
                 <div class="announcement-card">
-                  <div class="announcement-title"></div>
-                  <div class="announcement-content"></div>
+                  <div class="announcement-title">Site Maintenance</div>
+                  <div class="announcement-content">
+                    Vestibulum condimentum tellus lacus, in accumsan elit
+                    maximus ac. Donec hendrerit sodales congue…
+                  </div>
+                </div>
+                <div class="announcement-card">
+                  <div class="announcement-title">Community Share Day</div>
+                  <div class="announcement-content">
+                    Nam vel lectus tincidunt, rutrum nulla eu, ornare libero.
+                    Aliquam dictum accumsan porttitor...
+                  </div>
+                </div>
+                <div class="announcement-card">
+                  <div class="announcement-title">Updated Privacy Policy</div>
+                  <div class="announcement-content">
+                    Phasellus efficitur nisi eget elit consectetur, eget
+                    condimentum ante auctor. Cras fringilla sagittis sem in
+                    mattis...
+                  </div>
                 </div>
               </div>
             </div>
             <div class="trending">
+              <div class="trending-mark">Trending</div>
               <div class="trending-grid">
                 <div class="trending-card">
-                  <div class="trending-icon">a</div>
-                  <div class="trending-name">a</div>
-                  <div class="trending-description">a</div>
+                  <div class="trending-icon">
+                    <img
+                      src="https://www.svgrepo.com/show/52962/avatar.svg"
+                      alt=""
+                    />
+                  </div>
+                  <div class="trending-name">@marie</div>
+                  <div class="trending-description">Gamer</div>
+                </div>
+                <div class="trending-card">
+                  <div class="trending-icon">
+                    <img
+                      src="https://www.svgrepo.com/show/53115/asian.svg"
+                      alt=""
+                    />
+                  </div>
+                  <div class="trending-name">@janein</div>
+                  <div class="trending-description">Manager</div>
+                </div>
+                <div class="trending-card">
+                  <div class="trending-icon">
+                    <img
+                      src="https://www.svgrepo.com/show/87912/cooker.svg"
+                      alt=""
+                    />
+                  </div>
+                  <div class="trending-name">@louie</div>
+                  <div class="trending-description">Baker</div>
+                </div>
+                <div class="trending-card">
+                  <div class="trending-icon">
+                    <img
+                      src="https://www.svgrepo.com/show/13181/photographer.svg"
+                      alt=""
+                    />
+                  </div>
+                  <div class="trending-name">@tongso</div>
+                  <div class="trending-description">Photographer</div>
                 </div>
               </div>
             </div>
