add data for javascript

--- a/index.html
+++ b/index.html
@@ -222,56 +222,7 @@
         <div class="main-content-container">
           <div class="main-content">
             <div class="project-mark">Your Projects</div>
-            <div class="project-grid">
-              <div class="project-card">
-                <div class="project-title">title</div>
-                <div class="project-content">
-                  Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                  Laboriosam enim voluptates asperiores veritatis, tempora
-                  obcaecati. Harum expedita tempora atque iure, facere iste,
-                  odit, reiciendis tempore sed nihil dignissimos ducimus
-                  eligendi! Lorem ipsum dolor sit amet, consectetur adipisicing
-                  elit. Sunt soluta sit consectetur non. Quos quia doloribus eum
-                  maxime reprehenderit, nihil facere adipisci recusandae. Eius
-                  voluptatibus assumenda ducimus vitae recusandae nulla!
-                </div>
-
-                <div class="project-options">
-                  <img
-                    src="https://educanales.github.io/admin-dashboard/icons/star.svg"
-                    alt="star"
-                  />
-                  <img
-                    src="https://educanales.github.io/admin-dashboard/icons/eye.svg"
-                    alt="eye"
-                  />
-                  <img
-                    src="https://educanales.github.io/admin-dashboard/icons/dots.svg"
-                    alt="dots"
-                  />
-                </div>
-              </div>
-              <div class="project-card">
-                <div class="project-title">title</div>
-                <div class="project-content">some text</div>
-                <div class="project-options"></div>
-              </div>
-              <div class="project-card">
-                <div class="project-title">title</div>
-                <div class="project-content">some text</div>
-                <div class="project-options"></div>
-              </div>
-              <div class="project-card">
-                <div class="project-title">title</div>
-                <div class="project-content">some text</div>
-                <div class="project-options"></div>
-              </div>
-              <div class="project-card">
-                <div class="project-title">title</div>
-                <div class="project-content">some text</div>
-                <div class="project-options"></div>
-              </div>
-            </div>
+            <div class="project-grid"></div>
           </div>
           <div class="alerts">
             <div class="announcement">
@@ -350,6 +301,6 @@
         </div>
       </section>
     </main>
-    <script src="/script.js"></script>
+    <script type="module" src="./script.js"></script>
   </body>
 </html>
