added icon logo link

--- a/index.html
+++ b/index.html
@@ -187,7 +187,7 @@
             </div>
 
             <img
-              src="/assets/handbloom logo.svg"
+              src="https://scontent.fceb2-1.fna.fbcdn.net/v/t39.30808-6/452426275_3140515436085778_2207052458920558892_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeGOF9sl2CiTVCr-Zd5Vk90nsHm_SQ2W3-Wweb9JDZbf5S2hdXO-7r-T0M7neCZZTFpFK8UcKWpVPxDOrZksLtQA&_nc_ohc=gYttseQUYbcQ7kNvgHFIuAS&_nc_zt=23&_nc_ht=scontent.fceb2-1.fna&_nc_gid=AERMortKiyIm3ZzY5pg5yea&oh=00_AYBH4Ph013C91P4LRvJllq18ejyTH2TTku5PWJ2sYV1KPQ&oe=672B9F04"
               alt="profile icon"
               height="62px"
               width="62px"
@@ -200,7 +200,7 @@
           <div class="lower-nav">
             <div class="lower-left-nav">
               <img
-                src="/assets/handbloom logo.svg"
+                src="https://scontent.fceb2-1.fna.fbcdn.net/v/t39.30808-6/452426275_3140515436085778_2207052458920558892_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeGOF9sl2CiTVCr-Zd5Vk90nsHm_SQ2W3-Wweb9JDZbf5S2hdXO-7r-T0M7neCZZTFpFK8UcKWpVPxDOrZksLtQA&_nc_ohc=gYttseQUYbcQ7kNvgHFIuAS&_nc_zt=23&_nc_ht=scontent.fceb2-1.fna&_nc_gid=AERMortKiyIm3ZzY5pg5yea&oh=00_AYBH4Ph013C91P4LRvJllq18ejyTH2TTku5PWJ2sYV1KPQ&oe=672B9F04"
                 alt="profile icon"
                 height="82px"
                 width="82px"
